<resources>
    <string name="app_name">NoctiPractice</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="address_street">Street</string>
    <string name="address_city">City</string>
    <string name="address_state">State</string>
    <string name="address_zip">ZIP code</string>
    <string name="submit">Submit</string>
</resources>
