<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pltw.noctipractice.CustomerActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"/>
        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/edit_address_street"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/address_street"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_address_city"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/address_city"/>
        <EditText
            android:id="@+id/edit_address_state"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/address_state"/>
        <EditText
            android:id="@+id/edit_address_zip"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/address_zip"/>
    </LinearLayout>
    <Button
        android:id="@+id/main_activity_submit_btn"
        android:layout_width="200sp"
        android:layout_height="100sp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:layout_gravity="right"
        android:textSize="30dp"/>

</LinearLayout>
